--- a/projects.html
+++ b/projects.html
@@ -182,52 +182,47 @@
     <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
-        <!-- 3d printer design -->
-<h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">3d printer projects</h2>
-        <p class="section-intro">
-    These are the designs i have made in solidworks and 3d-printer.
+<!-- 3D Printer Projects -->
+<h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">3D Printer Projects</h2>
+<p class="section-intro">
+    These are the designs I have made in SolidWorks and 3D printers.
 </p>
 
 <div class="projects-container position-relative">
-    <button class="scroll-btn left" id="python-left"><i class="fas fa-chevron-left"></i></button>
+    <button class="scroll-btn left" id="printer-left"><i class="fas fa-chevron-left"></i></button>
 
-    <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
+    <div class="projects-row d-flex gap-3 overflow-auto" id="printer-row">
+        
         <div class="project-item">
-            <img src="img/camera.JPG" alt="Camera">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Camera Holder</a>
-            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Camera Holder</a>
+            <img src="img/camera.JPG" alt="Camera Holder">
+            <a href="#"><i class="fas fa-search-plus"></i> Camera Holder</a>
         </div>
-    </div>
 
-    <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/seedbombing.PNG" alt="Camera">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Seed Bombing</a>
-    </div>
+            <img src="img/seedbombing.PNG" alt="Seed Bombing">
+            <a href="#"><i class="fas fa-search-plus"></i> Seed Bombing</a>
+        </div>
 
-    <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
             <img src="img/joining part.JPG" alt="Drone Joining Part">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone Joining Part</a>
+            <a href="#"><i class="fas fa-search-plus"></i> Drone Joining Part</a>
         </div>
-    </div>
 
-        <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/clampfinal.JPG" alt="Clamp Final">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone Clamping</a>
+            <img src="img/clampfinal.JPG" alt="Drone Clamp">
+            <a href="#"><i class="fas fa-search-plus"></i> Drone Clamping</a>
         </div>
-    </div>
 
-         <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/arm.jpeg" alt="Robotic arm">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Robotic Arm</a>
+            <img src="img/arm.jpeg" alt="Robotic Arm">
+            <a href="#"><i class="fas fa-search-plus"></i> Robotic Arm</a>
         </div>
+
     </div>
 
-    <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
+    <button class="scroll-btn right" id="printer-right"><i class="fas fa-chevron-right"></i></button>
 </div>
+
 
 
 
