--- a/projects.html
+++ b/projects.html
@@ -194,6 +194,11 @@
     <div class="projects-row d-flex gap-3 overflow-auto" id="printer-row">
         
         <div class="project-item">
+            <img src="img/bevel.JPG" alt="Stamping">
+            <a href="#"><i class="fas fa-search-plus"></i> Stamping with bevel gear</a>
+        </div>
+        
+        <div class="project-item">
             <img src="img/camera.JPG" alt="Camera Holder">
             <a href="#"><i class="fas fa-search-plus"></i> Camera Holder</a>
         </div>
