--- a/projects.html
+++ b/projects.html
@@ -199,7 +199,13 @@
         </div>
         
         <div class="project-item">
+            <a href="img/Cam1.jpg" target="_blank" class="main-project-link">
+                <a href="img/Cam2.jpg" target="_blank" class="main-project-link">
+                    <a href="img/Cam3.jpg" target="_blank" class="main-project-link">
             <img src="img/camera.JPG" alt="Camera Holder">
+            </a>
+                </a>
+            </a>
             <a href="#"><i class="fas fa-search-plus"></i> Camera Holder</a>
         </div>
 
