--- a/projects.html
+++ b/projects.html
@@ -199,9 +199,9 @@
         </div>
         
         <div class="project-item">
-            <a href="img/Cam1.jpg" target="_blank" class="main-project-link">
-                <a href="img/Cam2.jpg" target="_blank" class="main-project-link">
-                    <a href="img/Cam3.jpg" target="_blank" class="main-project-link">
+            <a href="img/Cam1.jpeg" target="_blank" class="main-project-link">
+                <a href="img/Cam2.jpeg" target="_blank" class="main-project-link">
+                    <a href="img/Cam3.jpeg" target="_blank" class="main-project-link">
             <img src="img/camera.JPG" alt="Camera Holder">
             </a>
                 </a>
