--- a/projects.html
+++ b/projects.html
@@ -198,16 +198,16 @@
             <a href="#"><i class="fas fa-search-plus"></i> Stamping with bevel gear</a>
         </div>
         
-        <div class="project-item">
-            <a href="img/cam1.jpeg" target="_blank" class="main-project-link">
-                <a href="img/cam2.jpeg" target="_blank" class="main-project-link">
-                    <a href="img/cam3.jpeg" target="_blank" class="main-project-link">
-            <img src="img/camera.JPG" alt="Camera Holder">
-            </a>
-                </a>
-            </a>
-            <a href="#"><i class="fas fa-search-plus"></i> Camera Holder</a>
-        </div>
+       <div class="project-item">
+    <a href="img/cam1.jpeg" data-lightbox="camera-holder-gallery" data-title="Camera Holder - View 1">
+        <img src="img/camera.JPG" alt="Camera Holder">
+    </a>
+
+    <a href="img/cam2.jpeg" data-lightbox="camera-holder-gallery" data-title="Camera Holder - View 2" style="display: none;"></a>
+    <a href="img/cam3.jpeg" data-lightbox="camera-holder-gallery" data-title="Camera Holder - View 3" style="display: none;"></a>
+
+    <a href="#"><i class="fas fa-search-plus"></i> Camera Holder</a>
+</div>
 
         <div class="project-item">
             <img src="img/seedbombing.PNG" alt="Seed Bombing">
