--- a/projects.html
+++ b/projects.html
@@ -210,6 +210,7 @@
 </div>
 
         <div class="project-item">
+             <a href="img/seed.pdf" target="_blank" class="main-project-link">
             <img src="img/seedbombing.PNG" alt="Seed Bombing">
             <a href="#"><i class="fas fa-search-plus"></i> Seed Bombing</a>
         </div>
