--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="gallery-item">
-                    <img src="img/cardamom.jprg" class="img-fluid rounded w-100 h-100" alt="ran">
+                    <img src="img/cardamom.jpeg" class="img-fluid rounded w-100 h-100" alt="ran">
                 <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
