--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                             </div>
                             <div class="col-md-6">
                                 <div class="d-flex">
-                                    <div class="me-3"><i class="fas fa-certificate fa-3x text-primary"></i></div>
+                                    <div class="me-3"><i class="fas fa-book fa-3x text-primary"></i></div>
                                     <div>
                                         <h4 style="color: #228B22;">Hobby</h4>
                                         <p>Reading books</p>
