--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="bg-primary" style="padding-top: 100px; padding-bottom: 50px; font-weight: bold;">
     <div class="container py-5 text-center">
-        <h2 class="btn btn-primary rounded-pill py-2 px-4 flex-shrink-0" style="font-weight: bold;" >Skills</h2>
+        <h2 class="btn btn-primary rounded-pill py-2 px-4 flex-shrink-0" style="font-weight: bold;">Skills</h2>
         <p class="text-danger mb-4">Explore my skills below.</p>
 
         <div class="row g-4">
@@ -82,39 +82,39 @@
                 <div class="feature-item bg-dark rounded p-4">
                     <h4 class="text-white mb-3">Core Skills</h4>
                     <div class="d-flex flex-wrap justify-content-center">
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.3s">
                             <img src="icon/python-icon.png" alt="python" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Python</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.4s">
                             <img src="icon/SolidWorks-icon.jpeg" alt="solidworks" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">SolidWorks</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.5s">
                             <img src="icon/ANSYS_logo.png" alt="ANSYS" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">ANSYS</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.6s">
                             <img src="icon/MATLAB-icon.jpeg" alt="MATLAB" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">MATLAB</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.7s">
                             <img src="icon/Arduino-icon.jpeg" alt="Arduino" class="img-fluid mb-2" style="width: 50px;height: 50px;">
                             <p class="text-white">Arduino</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.8s">
                             <img src="icon/C-icon.png" alt="C" class="img-fluid mb-2" style="width: 50px;height: 50px;">
                             <p class="text-white">C programmming</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.9s">
                             <img src="icon/NodeMcu-icon.jpeg" alt="NodeMcu" class="img-fluid mb-2" style="width: 50px;height: 50px;">
                             <p class="text-white">NodeMcu</p>
                         </div>
-                         <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="1.0s">
                             <img src="icon/Mathcad-icon.png" alt="Mathcad" class="img-fluid mb-2" style="width: 50px;height: 50px;">
                             <p class="text-white">Mathcad</p>
                         </div>
-                         <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="1.1s">
                             <img src="icon/Prusa-icon.jpeg" alt="Prusa" class="img-fluid mb-2" style="width: 50px;height: 50px;">
                             <p class="text-white">Prusa 3D</p>
                         </div>
@@ -126,31 +126,31 @@
                 <div class="feature-item bg-dark rounded p-4">
                     <h4 class="text-white mb-3">Other Skills</h4>
                     <div class="d-flex flex-wrap justify-content-center">
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.5s">
                             <img src="icon/Word-icon.png" alt="Word" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Word</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.6s">
                             <img src="icon/Powerpoint-icon.png" alt="Powerpoint" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Powerpoint</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.7s">
                             <img src="icon/Excel-icon.jpeg" alt="Excel" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Excel</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.8s">
                             <img src="icon/Django-icon.png" alt="Django" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Django</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="0.9s">
                             <img src="icon/Flutter-icom.png" alt="Flutter" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Flutter</p>
                         </div>
-                         <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="1.0s">
                             <img src="icon/LATEX-icon.png" alt="LATEX" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">LATEX</p>
                         </div>
-                        <div class="skill-icon p-3 text-center">
+                        <div class="skill-icon p-3 text-center wow fadeInUp" data-wow-delay="1.1s">
                             <img src="icon/Teamwork-icon.jpeg" alt="Teamwork" class="img-fluid mb-2" style="width: 50px; height: 50px;">
                             <p class="text-white">Teamwork</p>
                         </div>
