--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="gallery-item">
+                    <img src="img/final3.jpeg" class="img-fluid rounded w-100 h-100" alt="ran">
+                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
+                      <div class="text-box fw-bold">
+                        Final year project Testing(B.E) at National Innovation Center-with CHairperson Mahabir Pun Sir </div>
+                </div>
+                    <div class="search-icon">
+                        <a href="img/final3.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/NYC-2025.jpeg" class="img-fluid rounded w-100 h-100" alt="NYC">
