--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                 <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
-                        Final year project Testing(B.E) at National Innovation Center-with CHairperson Mahabir Pun Sir </div>
+                        Final year project Testing(B.E) at National Innovation Center
+                      (from left:Shiva Khanal, Gaurab Badu, Dr. Mahabir Pun(chairperson NIC), Rajesh Tamang)</div>
                 </div>
                     <div class="search-icon">
                         <a href="img/final3.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
