--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
-                          Teaching Robotics at School </div>
+                          Robotics and Coding Instructor (School and college) </div>
                 </div>
                     <div class="search-icon">
                         <a href="img/school.jpg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-3"><i class="fas fa-search-plus"></i></a>
