--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
-                        Poster Presentantion on Cardamom Pod Seperation Machine-Pulchowk Campus with HOD </div>
+                        Poster Presentantion on Cardamom Pod Seperation Machine-Pulchowk Campus
+                      (From Left: Rohit Pati, Gaurab Badu, Dr. Sudip Bhattarai(HOD MEchanical and Aerospace Department), Toyatnath Poudel, Bijaya Chettri)</div>
                 </div>
                     <div class="search-icon">
                         <a href="img/cardamom.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
