--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                         Poster Presentantion on Cardamom Pod Seperation Machine-Pulchowk Campus
-                      (From Left: Rohit Pati, Gaurab Badu, Dr. Sudip Bhattarai(HOD MEchanical and Aerospace Department), Toyatnath Poudel, Bijaya Chettri)</div>
+                      (From Left: Rohit Pati, Gaurab Badu, Dr. Sudip Bhattarai(HOD MEchanical and Aerospace Department), Toyatnath Poudel, Bijaya Shedai)</div>
                 </div>
                     <div class="search-icon">
                         <a href="img/cardamom.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
