--- a/projects.html
+++ b/projects.html
@@ -100,8 +100,8 @@
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
         </div>
         <div class="project-item">
-            <img src="img/spoon.JPG" alt="Spoon">
-            <a href="video/name.mp4"><i class="fas fa-search-plus"></i> Spoon</a>
+            <img src="img/Uni.png" alt="Cardamom">
+            <a href="video/name.mp4"><i class="fas fa-search-plus"></i> Cardamom Pod Seperation Machine(V-chart)</a>
         </div>
         <div class="project-item">
             <img src="img/try.JPG" alt="Walking Robot">
