--- a/projects.html
+++ b/projects.html
@@ -100,6 +100,7 @@
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
         </div>
         <div class="project-item">
+            <a href="img/Combing.pdf" target="_blank" class="main-project-link">
             <img src="img/Uni.png" alt="Cardamom">
             <a href="video/name.mp4"><i class="fas fa-search-plus"></i> Cardamom Pod Seperation Machine(V-chart)</a>
         </div>
