--- a/projects.html
+++ b/projects.html
@@ -96,6 +96,7 @@
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="solid-row">
         <div class="project-item">
+            <a href="img/Universe.pdf" target="_blank" class="main-project-link">
             <img src="img/Power_Loom.jpeg" alt="Power Loom">
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
         </div>
