--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                         Poster Presentantion on Cardamom Pod Seperation Machine-Pulchowk Campus
+                      </div>
+                          <div style="font-size: 0.8em; color: white; margin-top: 5px;">
                       (From Left: Rohit Pati, Gaurab Badu, Dr. Sudip Bhattarai(HOD MEchanical and Aerospace Department), Toyatnath Poudel, Bijaya Shedai)</div>
                 </div>
                     <div class="search-icon">
