--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                       <div class="text-box fw-bold">
                         Poster Presentantion on Cardamom Pod Seperation Machine-Pulchowk Campus
                       </div>
-                          <div style="font-size: 0.8em; color: white; margin-top: 5px;">
+                          <div style="font-size: 0.4em; color: white; margin-top: 5px;">
                       (From Left: Rohit Pati, Gaurab Badu, Dr. Sudip Bhattarai(HOD MEchanical and Aerospace Department), Toyatnath Poudel, Bijaya Shedai)</div>
                 </div>
                     <div class="search-icon">
@@ -246,6 +246,8 @@
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                         Final year project Testing(B.E) at National Innovation Center
+                      </div>
+                    <div style="font-size: 0.4em; color: white; margin-top: 5px;">
                       (from left:Shiva Khanal, Gaurab Badu, Dr. Mahabir Pun(chairperson NIC), Rajesh Tamang)</div>
                 </div>
                     <div class="search-icon">
