--- a/about.html
+++ b/about.html
@@ -146,6 +146,16 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
+
+<div class="text-center my-3">
+    <button class="btn btn-primary" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#footerCollapse">
+        Footer ▼
+    </button>
+</div>
+<div id="footerCollapse" class="collapse">
 <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
     <div class="container py-5">
         <div class="row g-5">
