--- a/about.html
+++ b/about.html
@@ -146,14 +146,13 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
 
-<div class="text-center my-3">
-    <button class="btn btn-primary" 
-            type="button" 
-            data-bs-toggle="collapse" 
-            data-bs-target="#footerCollapse">
-        Footer ▼
-    </button>
-</div>
+<a href="#" class="btn btn-primary btn-lg-square rounded-circle"
+   data-bs-toggle="collapse"
+   data-bs-target="#footerCollapse"
+   style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
+    <i class="fa fa-arrow-up"></i>
+</a>
+
 <div id="footerCollapse" class="collapse">
 <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
     <div class="container py-5">
@@ -211,9 +210,6 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
         </div>
     </div>
 </div>
-<a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
