--- a/about.html
+++ b/about.html
@@ -146,13 +146,6 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
 
-<a href="#" class="btn btn-primary btn-lg-square rounded-circle"
-   data-bs-toggle="collapse"
-   data-bs-target="#footerCollapse"
-   style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
-    <i class="fa fa-arrow-up"></i>
-</a>
-
 <div id="footerCollapse" class="collapse">
 <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
     <div class="container py-5">
@@ -222,5 +215,12 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
 <script src="js/bootstrap.bundle.min.js"></script>
 
 <script src="js/main.js"></script>
+    <button class="footer-toggle-btn"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#footerCollapse">
+    <i class="fas fa-chevron-down"></i>
+</button>
+
 </body>
 </html>
