--- a/about.html
+++ b/about.html
@@ -125,7 +125,9 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                                 </div>
                                                 <h5 class="text-white mb-0">
                                                     <a href="img/Certificate.jpeg" target="_blank" style="color: inherit; text-decoration: none;">
-                                                    Certificates</h5>
+                                                    Certificates
+                                                    </a>
+                                                </h5>
                                             </div>
                                         </div>
                                     </div>
