--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div>
                         <h4 class="text-primary">About Me</h4>
-                        <h1 class="display-5 mb-4" style="color: #000080; font-size: 28px;">Mechanical Design Engineer</h1>
+                        <h1 class="display-5 mb-4" style="color: #000080;">Mechanical Design Engineer</h1>
                         <p style="text-align: justify; font-weight: bold;">
                             I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
 
@@ -125,9 +125,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                                 </div>
                                                 <h5 class="text-white mb-0">
                                                     <a href="img/Certificate.jpeg" target="_blank" style="color: inherit; text-decoration: none;">
-                                                    Certificates
-                                                    </a>
-                                                </h5>
+                                                    Certificates</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -148,6 +146,14 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
 
+<div class="text-center my-3">
+    <button class="btn btn-primary" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#footerCollapse">
+        Footer ▼
+    </button>
+</div>
 <div id="footerCollapse" class="collapse">
 <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
     <div class="container py-5">
@@ -205,6 +211,9 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
         </div>
     </div>
 </div>
+<a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -215,75 +224,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
 <script src="lib/lightbox/js/lightbox.min.js"></script>
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const footerCollapseElement = document.getElementById('footerCollapse');
-        // Since you removed the content wrapper, we'll observe the collapse element itself
-        const bsCollapse = new bootstrap.Collapse(footerCollapseElement, { toggle: false });
-        let observer = null;
-
-        // Function to close the footer
-        function closeFooter() {
-            if (footerCollapseElement.classList.contains('show')) {
-                bsCollapse.hide();
-            }
-        }
-
-        // The core logic: Auto-close using Intersection Observer
-        footerCollapseElement.addEventListener('shown.bs.collapse', function () {
-            // Stop any existing observer before creating a new one
-            if (observer) {
-                observer.unobserve(footerCollapseElement);
-            }
-
-            // Get the current height of the fully expanded footer for calculation
-            const footerHeight = footerCollapseElement.offsetHeight;
-            
-            // Set the rootMargin: The collapse area itself will be the target.
-            // We want it to be considered "out" when the scroll moves up and the element
-            // is scrolled up past the viewport's top edge. We add a small buffer (e.g., 50px).
-            const rootMarginValue = `-${footerHeight + 50}px 0px 0px 0px`;
-            
-            const observerOptions = {
-                root: null, // relative to the viewport
-                rootMargin: rootMarginValue, 
-                threshold: 0 // trigger immediately when margin is crossed
-            };
-
-            observer = new IntersectionObserver((entries, obs) => {
-                entries.forEach(entry => {
-                    // If the entry is no longer intersecting (i.e., it has scrolled up past the rootMargin)
-                    if (!entry.isIntersecting) {
-                        closeFooter();
-                        obs.unobserve(footerCollapseElement); // Stop observing after closing
-                        observer = null;
-                    }
-                });
-            }, observerOptions);
-
-            // Start observing the collapsible footer element itself
-            observer.observe(footerCollapseElement);
-        });
-
-        // Optional: If the user manually closes it, ensure the observer is cleaned up too
-        footerCollapseElement.addEventListener('hidden.bs.collapse', function() {
-            if (observer) {
-                observer.unobserve(footerCollapseElement);
-                observer = null;
-            }
-        });
-    });
-</script>
 
 <script src="js/main.js"></script>
-<button class="footer-toggle-btn collapsed" 
-        type="button" 
-        data-bs-toggle="collapse" 
-        data-bs-target="#footerCollapse"
-        aria-expanded="false" 
-        aria-controls="footerCollapse">
-        <i class="fas fa-angle-up"></i>
-    </button>
-
 </body>
 </html>
