--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
                     <div>
                         <h4 class="text-primary">About Me</h4>
                         <h1 class="display-5 mb-4" style="color: #000080; font-size: 28px;">Mechanical Design Engineer</h1>
-                        <p class="mb-5">
-                            <strong>I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
+                        <p style="text-align: justify; font-weight: bold;">
+                        I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
 
 I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
 
                             During my professional work at the Robotics Association of Nepal (RAN), I led the design and fabrication of a semi-automatic Banana Fiber Extraction, Combing, and Twisting Machine. This project, supported by UNDP Nepal, culminated in providing technical training to almost 150 farmers, demonstrating my ability to deliver impactful, real-world engineering solutions.
-                            </strong>
+                        
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
