--- a/about.html
+++ b/about.html
@@ -73,15 +73,6 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                         <div class="row g-4">
                             <div class="col-md-6">
                                 <div class="d-flex">
-                                    <div class="me-3"><i class="fas fa-file-alt fa-3x fa-3x text-primary"></i></div>
-                                    <div>
-                                        <h4 style="color: #228B22;">Publications</h4>
-                                        <p>One published research paper in the journal of Kathmandu Engineering College.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-graduation-cap fa-3x text-primary"></i></div>
                                     <div>
                                         <h4 style="color: #228B22;">Education</h4>
@@ -92,10 +83,20 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                             </div>
                             <div class="col-md-6">
                                 <div class="d-flex">
+                                    <div class="me-3"><i class="fas fa-file-alt fa-3x fa-3x text-primary"></i></div>
+                                    <div>
+                                        <h4 style="color: #228B22;">Publications</h4>
+                                        <p>One research paper published in the journal of Kathmandu Engineering College.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-heart fa-3x fa-3x text-primary"></i></div>
                                     <div>
                                         <h4 style="color: #228B22;">Interest</h4>
-                                        <p>Mechanical Design, AI, Robotics, Machine Learning.</p>
+                                        <p>Mechanical Design, Artificial Intelligence, Robotics and Automation, Machine Learning, Agriculture Automation,
+                                            Automatic Vehicle, Quantum Technology, Unmanned Aerial Vehicle.</p>
                                     </div>
                                 </div>
                             </div>
