--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                     <div class="me-3"><i class="fas fa-book fa-3x text-primary"></i></div>
                                     <div>
                                         <h4 style="color: #228B22;">Hobby</h4>
-                                        <p>Reading books</p>
+                                        <p>Reading books; Music; Playing Cricket; Inspiring people</p>
                                     </div>
                                 </div>
                             </div>
