--- a/about.html
+++ b/about.html
@@ -67,8 +67,12 @@
 
 I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
 
-                            During my professional work at the Robotics Association of Nepal (RAN), I led the design and fabrication of a semi-automatic Banana Fiber Extraction, Combing, and Twisting Machine. This project, supported by UNDP Nepal, culminated in providing technical training to almost 150 farmers, demonstrating my ability to deliver impactful, real-world engineering solutions.
-                        
+                           <P> During my professional work at the Robotics Association of Nepal (RAN), I led the design and fabrication of a semi-automatic Banana Fiber Extraction, Combing, and Twisting Machine. This project, supported by UNDP Nepal, culminated in providing technical training to almost 150 farmers, demonstrating my ability to deliver impactful, real-world engineering solutions.
+                           </p>
+                        <p>
+                            Apart from this I have 2 years of teaching skills. I have taught Robotics and Coding to the students of class 6 to 12. I have taught C and python prograggming language and basic electronics, which help fostering my skills.
+                            I am currently participate in doing research. Currently I am working on autonous pesticide spraying vehicle, implementing ROS(Robot Operating SYstem), OpenCV. I am also working on solving the beam problem using physics informed machine learning.
+                        </p>
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
