--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div>
                         <h4 class="text-primary">About Me</h4>
-                        <h1 class="display-5 mb-4" style="color: #000080; font-size: 28px;">Mechanical Design Engineer</h1>
+                        <h1 class="display-5 mb-4" style="color: #000080; font-size: 28px; border: 2px solid black; padding: 5px; display: inline-block;">Mechanical Design Engineer</h1>
                         <p style="text-align: justify; font-weight: bold;">
                         I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
 
