--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                            <P style="text-align: justify; font-weight: bold;"> During my professional work at the Robotics Association of Nepal (RAN), I led the design and fabrication of a semi-automatic Banana Fiber Extraction, Combing, and Twisting Machine. This project, supported by UNDP Nepal, culminated in providing technical training to almost 150 farmers, demonstrating my ability to deliver impactful, real-world engineering solutions.
                            </p>
                         <p style="text-align: justify; font-weight: bold;">
-                            Apart from this I have 2 years of teaching skills. I have taught Robotics and Coding to the students of class 6 to 12. I have taught C and python prograggming language and basic electronics, which help fostering my skills.
-                            I am currently participate in doing research. Currently I am working on autonous pesticide spraying vehicle, implementing ROS(Robot Operating SYstem), OpenCV. I am also working on solving the beam problem using physics informed machine learning.
-                        </p>
+                           In addition, I have two years of teaching experience in Robotics and Coding for students in grades 6 through 12. I have taught C and Python programming languages and basic electronics, which has further honed my technical skills.
+                            I am currently actively involved in research.Specifically, I am developing an autonomous pesticide spraying vehicle, which involves implementing ROS (Robot Operating System) and OpenCV.
+                            I am also working on solving beam deflection problems using Physics-Informed Machine Learning (PIML).
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
