--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <div class="row g-5">
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div>
-                        <h4 class="text-primary">About Me</h4>
+                        <h4 class="text-primary" border: 2px solid black; padding: 5px; display: inline-block;">About Me</h4>
                        <!--
                         <h1 class="display-5 mb-4" style="color: #000080; font-size: 28px; border: 2px solid black; padding: 5px; display: inline-block;">Mechanical Design Engineer</h1>
                         -->
